--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/TheWall.loader.js";
+      var loaderUrl = buildUrl + "/the-wall.loader.js";
       var config = {
-        dataUrl: buildUrl + "/TheWall.data.unityweb",
-        frameworkUrl: buildUrl + "/TheWall.framework.js.unityweb",
-        codeUrl: buildUrl + "/TheWall.wasm.unityweb",
+        dataUrl: buildUrl + "/the-wall.data.unityweb",
+        frameworkUrl: buildUrl + "/the-wall.framework.js.unityweb",
+        codeUrl: buildUrl + "/the-wall.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "The Super Challenge",
         productName: "The Wall",
